feat(Placeholder) : register placeholders

--- a/EndiaPowerPlugin/src/main/resources/plugin.yml
+++ b/EndiaPowerPlugin/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: EndiaPowerPlugin
 version: '${version}'
 main: fr.traqueur.endiapower.EndiaPowerPlugin
 api-version: '1.20'
+depend: ["PlaceholderAPI"]
