feat(Gui) : start powers gui WIP

--- a/EndiaPowerPlugin/build.gradle
+++ b/EndiaPowerPlugin/build.gradle
@@ -29,6 +29,7 @@ processResources {
 
 shadowJar {
     from(project(':EndiaPowerAPI').sourceSets.main.output)
+    relocate 'fr.minuskube.inv', 'fr.traqueur.endiapower.utils.inv'
 }
 
 assemble.dependsOn shadowJar
