--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ subprojects {
     dependencies {
         compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
         compileOnly 'me.clip:placeholderapi:2.11.5'
+
+        implementation('fr.minuskube.inv:smart-invs:1.2.7')
     }
 }
 
